# beginner_in_3d

./: Cargo.toml
src/: camera.rs  main.rs  player.rs  world.rs
