[package]
name = "beginner_in_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
bevy_third_person_camera = "0.1.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
